more test cases added